# sample-agent-cost-bench

./: .gitignore  LICENSE  README.md  SECURITY.md  config.cli-compare.codex.example.yaml  config.cli-compare.example.yaml  config.model-compare.example.yaml  config.model-compare.openrouter.example.yaml  pyproject.toml
agent_cost_bench/: __init__.py  cli.py  config.py  judge.py  logger.py  models.py  preflight.py  runner.py  sandbox.py  targets.py  usage.py
agent_cost_bench/evaluator/: functional.py  pytest_runner.py  rubric.py  script_runner.py  steering.py
agent_cost_bench/executor/: __init__.py  base.py  spec.py
agent_cost_bench/reporter/: __init__.py  html.py
agent_cost_bench/reporter/templates/: report_cli_compare.html  report_model_compare.html
agent_cost_bench/verify/: __init__.py  docker_env.py  runner.py
docs/: comparison-aws-sample-benchmark.md
kirobench/: __init__.py  cli.py  config.py  judge.py  logger.py  models.py  preflight.py  runner.py  sandbox.py  stats.py  targets.py  usage.py
kirobench/evaluator/: __init__.py  functional.py  pytest_runner.py  rubric.py  script_runner.py  spec_paths.py  spec_quality.py  task_completion.py
kirobench/executor/: base.py
kirobench/reporter/: html.py  json_reporter.py
kirobench/reporter/templates/: _styles.html  report_cli_compare.html  report_model_compare.html
kirobench/verify/: docker_env.py  parsers.py  runner.py
tasks/docker/: build-images.sh
tasks/docker/dotnet/: Dockerfile  warm.csproj
tasks/docker/helm/: Dockerfile
tasks/docker/java/: Dockerfile  warm-pom.xml
tasks/docker/node/: Dockerfile  warm-package.json
tasks/docker/terraform/: Dockerfile  terraformrc  warm.tf
tasks/spec/auth-feature/: task.yaml
tasks/spec/auth-feature/seed/: requirements.md
tasks/spec/auth-feature/steering/: tech.md
tasks/spec/auth-feature/verify/: test_auth_api.py
tasks/vibe/bedrock-sentiment/: task.yaml
tasks/vibe/bedrock-sentiment/ref/: correct_implementation.md
tasks/vibe/dashboard/: task.yaml
tasks/vibe/dashboard/verify/: test_dashboard.py
tasks/vibe/distributed-task-processor/: task.yaml
tasks/vibe/distributed-task-processor/verify/: test_task_processor.py
tasks/vibe/dockerize-flask/: task.yaml
tasks/vibe/dockerize-flask/src/: app.py
tasks/vibe/dockerize-flask/verify/: test_dockerize.py
tasks/vibe/dotnet-invoicing/: task.yaml
tasks/vibe/dotnet-invoicing/src/: InvoiceEngine.cs  Invoicing.csproj  Models.cs
tasks/vibe/ecommerce-order-saga/: task.yaml
tasks/vibe/ecommerce-order-saga/verify/: test_ecommerce.py
tasks/vibe/event-sourcing-cqrs/: task.yaml
tasks/vibe/event-sourcing-cqrs/verify/: test_event_sourcing.py
tasks/vibe/geotrack-duplicate-device/: task.yaml
tasks/vibe/harden-k8s/: task.yaml
tasks/vibe/harden-k8s/src/: deployment.yaml
tasks/vibe/harden-k8s/verify/: test_k8s.py
tasks/vibe/helm-chart/: task.yaml
tasks/vibe/java-ratelimiter/: task.yaml
tasks/vibe/log-analyzer-cli/: task.yaml
tasks/vibe/ml-pipeline-orchestrator/: task.yaml
tasks/vibe/multitenant-rbac-api/: task.yaml
tasks/vibe/multitenant-workflow-engine/: task.yaml
tasks/vibe/note-cli/: task.yaml
tasks/vibe/platform-as-a-service/: task.yaml
tasks/vibe/rest-api/: task.yaml
tasks/vibe/terraform-s3/: task.yaml
tasks/vibe/terraform-serverless-spa/: task.yaml
tasks/vibe/typescript-circuit-breaker/: task.yaml
tests/: conftest.py  mock_cli.py  test_cli.py  test_config.py  test_evaluator.py  test_executor.py  test_integration.py  test_judge.py  test_models.py  test_preflight_docker.py  test_reporters.py  test_runner.py  test_script_runner.py  test_stats.py  test_usage.py  test_verify_parsers.py  test_verify_spec.py
(+29 files in other folders)
