[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kirobench"
version = "0.1.0"
description = "Unified benchmark framework: compare coding CLIs on cost (cli-compare) and models on quality+cost (model-compare)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Kiro Team" }
]
keywords = [
    "kiro", "claude-code", "copilot", "cli", "benchmark",
    "cost", "llm", "evaluation", "spec-driven", "coding",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
kirobench = "kirobench.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kirobench*"]

[tool.setuptools.package-data]
kirobench = ["reporter/templates/*.html", "reporter/templates/*.css"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
asyncio_mode = "auto"
